{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 302,
  "lineage": "6fd2dea4-8e8c-d5b4-19d7-ec510dd02b5a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ag_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-agsubnet-nsg",
            "location": "eastus",
            "name": "Gunasekhar-Demo-vnet-agsubnet-nsg",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-appsubnet-nsg",
            "location": "eastus",
            "name": "Gunasekhar-Demo-vnet-appsubnet-nsg",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-dbsubnet-nsg",
            "location": "eastus",
            "name": "Gunasekhar-Demo-vnet-dbsubnet-nsg",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ag_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-agsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "Gunasekhar-Demo-vnet-agsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ag_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-agsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "Gunasekhar-Demo-vnet-agsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ag_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "Gunasekhar-Demo-vnet-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "Gunasekhar-Demo-vnet-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "Gunasekhar-Demo-vnet-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "Gunasekhar-Demo-vnet-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_ag_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/publicIPAddresses/Gunasekhar-Demo-web-ag-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Gunasekhar-Demo-web-ag-publicip",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "agsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet/subnets/Gunasekhar-Demo-vnet-agsubnet",
            "name": "Gunasekhar-Demo-vnet-agsubnet",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "virtual_network_name": "Gunasekhar-Demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet/subnets/Gunasekhar-Demo-vnet-appsubnet",
            "name": "Gunasekhar-Demo-vnet-appsubnet",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "virtual_network_name": "Gunasekhar-Demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet/subnets/Gunasekhar-Demo-vnet-dbsubnet",
            "name": "Gunasekhar-Demo-vnet-dbsubnet",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "virtual_network_name": "Gunasekhar-Demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ag_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet/subnets/Gunasekhar-Demo-vnet-agsubnet",
            "network_security_group_id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-agsubnet-nsg",
            "subnet_id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet/subnets/Gunasekhar-Demo-vnet-agsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.ag_subnet_nsg",
            "azurerm_network_security_rule.ag_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet/subnets/Gunasekhar-Demo-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-appsubnet-nsg",
            "subnet_id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet/subnets/Gunasekhar-Demo-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet/subnets/Gunasekhar-Demo-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/networkSecurityGroups/Gunasekhar-Demo-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet/subnets/Gunasekhar-Demo-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0eb151eb-2b31-427b-aefb-1de6f44b4079",
            "id": "/subscriptions/6cd202f6-c562-4cc5-a129-7b1a556216a2/resourceGroups/Gunasekhar-Demo-rg-xhxbwr/providers/Microsoft.Network/virtualNetworks/Gunasekhar-Demo-vnet",
            "location": "eastus",
            "name": "Gunasekhar-Demo-vnet",
            "resource_group_name": "Gunasekhar-Demo-rg-xhxbwr",
            "tags": {
              "environment": "Demo",
              "owners": "Gunasekhar"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}